# hack-assembler

./: Cargo.toml  LICENSE  README.md
assets/: error.asm
src/: assembler.rs  error.rs  instruction.rs  lib.rs  main.rs  symbol_table.rs
tests/: assembler_test.rs
tests/expected/: test.hack
tests/input/: test.asm
