[package]
name = "hack_assembler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




[lib]
name = "hack_assembler"
path = "src/lib.rs"

[[bin]]
name = "hack_assembler"
path = "src/main.rs"




[dependencies]
clap = "4.5.4"